SLCORE-659 Create a temporary replacement for Standalone/Connected engine